--- a/app/src/main/res/layout/list_item_plate.xml
+++ b/app/src/main/res/layout/list_item_plate.xml
@@ -3,16 +3,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minHeight="?listPreferredItemHeight">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/plate_text_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/text_separation_margin"
-        android:textColor="@color/textColor"
-        tools:text="RI177PO"/>
+        android:orientation="horizontal"
+        android:minHeight="?listPreferredItemHeight">
+
+        <TextView
+            android:id="@+id/plate_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/text_separation_margin"
+            android:layout_weight="1"
+            android:textColor="@color/textColor"
+            tools:text="RI177PO"/>
+
+        <ImageView
+            android:id="@+id/delete_plate_clickable_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_delete"
+            android:background="?selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"/>
+
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
