--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,23 +8,72 @@
     tools:context=".HomeActivity">
 
 
-    <LinearLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_parent_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/user_balance_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"/>
 
-        <ListView
-            android:id="@+id/user_plates_list_view"
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/home_activity_parent_scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/balance_layout_padding"
+                    android:paddingTop="@dimen/balance_layout_padding">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_centerInParent="true">
+
+                        <TextView
+                            android:id="@+id/user_balance_text_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:gravity="center"
+                            android:textSize="64sp"
+                            android:text="0.00 kn"/>
+
+                        <Button
+                            android:id="@+id/add_payment_to_the_account_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="@dimen/account_balance_payment_button_margin"
+                            android:background="@drawable/payment_custom_button"
+                            android:foreground="?selectableItemBackground"
+                            tools:ignore="UnusedAttribute"
+                            android:text="@string/add_to_the_account"
+                            android:textColor="@color/backgroundColor"/>
+
+                    </LinearLayout>
+
+
+
+                </RelativeLayout>
+
+
+                <ListView
+                    android:id="@+id/user_plates_list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 
@@ -44,3 +93,4 @@
 
 
 </RelativeLayout>
+
