--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
 
     <dimen name="text_separation_margin">16dp</dimen>
 
+    <dimen name="balance_layout_padding">50dp</dimen>
+    <dimen name="account_balance_payment_button_margin">16dp</dimen>
+
 </resources>
