--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,21 @@
     tools:context=".HomeActivity">
 
 
+    <TextView
+        android:id="@+id/no_internet_connection_TV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/warningColor"
+        android:textColor="@color/backgroundColor"
+        android:text="@string/no_internet_connection"
+        android:gravity="center"
+        android:padding="2dp"
+        android:elevation="4dp"
+        android:visibility="visible"
+        tools:ignore="UnusedAttribute" />
+
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_parent_layout"
         android:layout_width="match_parent"
