--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
         android:gravity="center"
         android:padding="2dp"
         android:elevation="4dp"
-        android:visibility="visible"
+        android:visibility="gone"
         tools:ignore="UnusedAttribute" />
 
 
