--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,28 @@
     android:background="@color/backgroundColor"
     tools:context=".MainActivity">
 
-    <!--TODO: add please wait message, no internet message and login manually option-->
-
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/no_internet_connection_TV"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Main"/>
-
+        android:layout_alignParentTop="true"
+        android:background="@color/warningColor"
+        android:textColor="@color/backgroundColor"
+        android:text="@string/no_internet_connection"
+        android:gravity="center"
+        android:padding="2dp"
+        android:elevation="4dp"
+        android:visibility="gone"
+        tools:ignore="UnusedAttribute" />
 
     <Button
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Login"/>
+        android:background="@drawable/payment_custom_button"
+        android:textColor="@color/backgroundColor"
+        android:text="@string/login"/>
 
 
 </RelativeLayout>
